support/crown/tests/compile-fail/unrooted_must_root_parameter.rs
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
//@rustc-env:RUSTC_BOOTSTRAP=1

#[crown::unrooted_must_root_lint::must_root]
struct Foo(i32);

fn foo1(_: Foo) {} //~ ERROR: Type must be rooted

fn main() {}
